2008-11-24  higepon  <higepon@users.sourceforge.jp>

        * Fixed error procedure.

        * Fixed integer->char bug.

        * Added string-copy and string-for-each.

        * Fixnum.cpp (Fixnum::integerDiv): Fixed the bug.
                                           The result of integerDiv can be Bignum,
                                           So use Bignum::makeInteger().

        * Fixed (/ 0.000 0) => +inf.0.

        * Fixed (sqrt -5).

        * NumberReader.y (naninf): Fixed imag-part of +inf.

        * Fixed : string=? for arguments length >= 3.

        * Improved : write and display of compound-condition and record.

        * Added symbol=?, boolean=?.

2008-11-23  higepon  <higepon@users.sourceforge.jp>

        * Fixed 1e10 style read for decimal.

        * lib/mosh/condition.ss : Added &no-nans and &no-infinities.

        * Passed all of syntax-case tests of R6RS test suite.

        * Passed all of flonums tests of R6RS test suite.

        * Passed all of bitwise tests of R6RS test suite.

        * Bignum.h : Fixed the bug of bitwise-length when number is negative.

        * Added: number->string.

        * Rewrote: real-part and imag-part.

        * Added: make-rectangular, make-polar, angle and magnitude.

        * Rewrote: expt for Complex numbers.

2008-11-23  kokosabu  <kokosabu@gmail.com>

        * Added : fx+/carry, fx-/carry, fx*/carry, fxnot, fxand, fxior, fxxor, fxif.

2008-11-22  higepon  <higepon@users.sourceforge.jp>

        * lib/core/base.scm (exact-integer-sqrt): Added.

        * Added asin, acos for Complex number.

        * Rewrote sqrt for Complex number.

        * Added angle procedure and tests.

        * Added test for magnitude.

2008-11-22  kokosabu  <kokosabu@gmail.com>

        * Added : fx-, fxdiv-and-mod, fxdiv, fxmod, fxdiv0-and-mod0, fxdiv0, fxmod0.

        * Fixnum.h : fixed BITS.

2008-11-21  kokosabu  <kokosabu@gmail.com>

        * Added : fix*.

        * Fixnum.h : fixed MAX.
